[metadata]
name = flexlibs
version = 1.1.2
description = A library for accessing FieldWorks Language Explorer projects
long_description = file: README.rst
url = https://github.com/cdfarrow/flexlibs
license_files = LICENSE.txt

author = Craig Farrow
author_email = flextoolshelp@gmail.com

platforms = ['Windows', 'Linux']
classifiers = 
        Intended Audience :: Developers
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Text Processing :: Linguistic
        Topic :: Database
        License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)


[options]
python_requires = >=3.6, <3.9

install_requires =
    pythonnet>=2.0.0

# Tell setuptools about our Python package named 'flexlibs', 
# and configures the distribution to install into site-packages/flexlibs.
# This will contain the sub-folders from the flexlibs folder:
#
# flexlibs
#   ├───code
#   ├───docs
#   ├───examples
#   ├───flex-dlls
#   └───tests
    
package_dir =
    flexlibs = flexlibs

# The flex-dlls & docs directories are specified in MANIFEST.in
# 'include_package_data = True' includes these in the wheel.
include_package_data = True


[bdist_wheel]
# Supports Python 2 & 3
universal=1     
