[metadata]
name = flexlibs
version = attr: flexlibs.version
description = A library for accessing FieldWorks Language Explorer projects
long_description = file: README.rst
url = https://github.com/cdfarrow/flexlibs
license_files = LICENSE.txt

author = Craig Farrow
author_email = flextoolshelp@gmail.com

platforms = ['Windows', 'Linux']
classifiers = 
        Intended Audience :: Developers
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Text Processing :: Linguistic
        Topic :: Database
        License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)


[options]
python_requires = >=3.6, <3.9

# The libraries needed at runtime:
install_requires =
    pythonnet>= 3.0.1

# Tell setuptools about our Python package named 'flexlibs', 
# and configure the distribution to install into site-packages/flexlibs.
# This will contain the sub-folders from the flexlibs folder:
#
# flexlibs
#   ├───code
#   ├───docs
#   ├───examples
#   └───tests
    
package_dir =
    flexlibs = flexlibs

# The docs directory is specified in MANIFEST.in
# 'include_package_data = True' includes this in the wheel.
include_package_data = True


[bdist_wheel]
   
