[metadata]
name = flexlibs
version = attr: flexlibs.version
description = A library for accessing FieldWorks Language Explorer projects
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/cdfarrow/flexlibs/wiki
license = "GPL-2.0-or-later"
license_files = LICENSE.txt

author = Craig Farrow
author_email = flextoolshelp@gmail.com

platforms = 'Windows'
classifiers = 
        Intended Audience :: Developers
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        Topic :: Text Processing :: Linguistic
        Topic :: Database


[options]
python_requires = >=3.8, <3.14

# The libraries needed at runtime:
install_requires =
    pythonnet >= 3.0.3, <3.1

# Tell setuptools about our Python package named 'flexlibs', 
# and configure the distribution to install into site-packages/flexlibs.
# This will contain the sub-folders from the flexlibs folder:
#
# flexlibs
#   ├───code
#   ├───docs
#   ├───examples
#   └───tests
    
package_dir =
    flexlibs = flexlibs

# The docs directory is specified in MANIFEST.in
# 'include_package_data = True' includes this in the wheel.
include_package_data = True  
